Rewrote tests to work